--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "12.7.12",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/styled-components": "^4.1.19",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "babel-eslint": "10.0.3",
@@ -16,6 +17,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
+    "bootstrap": "^4.3.1",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
@@ -48,6 +50,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -59,6 +62,7 @@
     "semver": "6.3.0",
     "source-map-explorer": "^2.1.0",
     "style-loader": "1.0.0",
+    "styled-components": "^4.4.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "typescript": "3.6.4",
