--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/styled-components": "^4.1.20",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
@@ -61,7 +62,8 @@
     "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "node build/scripts/start.js",
@@ -137,6 +139,7 @@
     ]
   },
   "devDependencies": {
+    "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "eslint": "^6.6.0",
