--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-loader": "3.0.2",
     "eslint-plugin-flowtype": "3.13.0",
     "file-loader": "3.0.1",
+    "formik": "^2.0.3",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
