--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
     "@types/jest": "24.0.21",
+    "@types/lodash": "^4.14.144",
     "@types/node": "12.12.5",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/react-router-dom": "^5.1.2",
     "@types/styled-components": "^4.1.20",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
@@ -34,6 +36,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -69,7 +72,8 @@
   "scripts": {
     "start": "node build/scripts/start.js",
     "build": "node build/scripts/build.js",
-    "test": "node build/scripts/test.js"
+    "test": "node build/scripts/test.js",
+    "lint:fix": "npx eslint --fix src/**"
   },
   "eslintConfig": {
     "extends": "react-app"
