--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
     },
     "extends": [
         "airbnb",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:import/typescript"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -32,6 +33,7 @@
     ],
     "rules": {
         "no-unused-vars": 0,
+        "import/prefer-default-export": 0,
         "react/display-name": "off",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
