--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
+    "@types/history": "^4.7.3",
     "@types/jest": "24.0.21",
     "@types/lodash": "^4.14.144",
     "@types/node": "12.12.5",
@@ -29,6 +30,7 @@
     "file-loader": "3.0.1",
     "formik": "^2.0.3",
     "fs-extra": "7.0.1",
+    "history": "^4.10.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
