--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-stripe-elements": "^6.0.1",
     "redux": "^4.0.4",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
@@ -146,6 +147,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-stripe-elements": "^1.3.5",
     "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
