--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@types/node": "12.12.5",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/react-stripe-elements": "^1.3.5",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^4.1.21",
+    "@types/yup": "^0.26.24",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
@@ -56,6 +60,7 @@
     "react-router-dom": "^5.1.2",
     "react-stripe-elements": "^6.0.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
@@ -147,8 +152,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-stripe-elements": "^1.3.5",
-    "@types/yup": "^0.26.24",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "eslint": "^6.6.0",
