--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.11.0",
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-datepicker": "^2.10.1",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
