--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
         "max-len": ["error", {"code": 140}],
         "dot-notation":"off",
         "no-unused-vars": 0,
+        "class-methods-use-this": 0,
+        "arrow-body-style": [2, "as-needed"],
         "react/jsx-props-no-spreading": 0,
         "import/prefer-default-export": 0,
         "react/display-name": "off",
