fixed docker file and nginx configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,13 @@
-server {
-  location / {
-    root /var/www/mysite;
-    try_files $uri /index.html;
+events {  }
+
+http {
+
+  include /etc/nginx/mime.types;
+
+  server {
+    location / {
+      root /usr/share/nginx/html;
+      try_files $uri /index.html;
+    }
   }
 }
