--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/lodash": "^4.14.144",
     "@types/node": "12.12.5",
     "@types/react": "16.9.11",
+    "@types/react-datepicker": "^2.9.5",
+    "@types/react-dates": "^17.1.5",
     "@types/react-dom": "16.9.3",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
@@ -44,6 +46,7 @@
     "jest-watch-typeahead": "0.4.0",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.8.0",
+    "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -54,7 +57,7 @@
     "react": "^16.11.0",
     "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^1.0.0-beta.14",
-    "react-datepicker": "^2.10.1",
+    "react-dates": "^21.5.1",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
