fixed packages issues, fixed algorithm issue to create hashmap to be able to render the proper hours

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
         "arrow-body-style": [2, "as-needed"],
         "react/jsx-props-no-spreading": 0,
         "import/prefer-default-export": 0,
+        "import/extensions": ["off", "never"],
         "react/display-name": "off",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
