--- a/package.json
+++ b/package.json
@@ -3,90 +3,90 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.6.0",
-    "@svgr/webpack": "4.3.2",
+    "@babel/core": "7.7.7",
+    "@svgr/webpack": "5.0.0",
     "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "^4.7.3",
-    "@types/jest": "24.0.21",
-    "@types/lodash": "^4.14.144",
-    "@types/node": "12.12.5",
-    "@types/react": "16.9.11",
-    "@types/react-datepicker": "^2.9.5",
-    "@types/react-dates": "^17.1.5",
-    "@types/react-dom": "16.9.3",
+    "@types/jest": "24.0.25",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "13.1.1",
+    "@types/react": "16.9.17",
+    "@types/react-datepicker": "^2.10.0",
+    "@types/react-dates": "^17.1.7",
+    "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.5",
-    "@types/react-router-dom": "^5.1.2",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-stripe-elements": "^1.3.5",
     "@types/redux": "^3.6.0",
-    "@types/styled-components": "^4.1.21",
-    "@types/yup": "^0.26.24",
+    "@types/styled-components": "^4.4.1",
+    "@types/yup": "^0.26.27",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-react-app": "^9.0.2",
-    "camelcase": "^5.2.0",
+    "babel-plugin-named-asset-import": "^0.3.5",
+    "babel-preset-react-app": "^9.1.0",
+    "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chai": "^4.2.0",
-    "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
+    "css-loader": "3.4.0",
+    "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "3.13.0",
-    "file-loader": "3.0.1",
-    "formik": "^2.0.3",
-    "fs-extra": "7.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-flowtype": "4.5.2",
+    "file-loader": "5.0.2",
+    "formik": "^2.0.8",
+    "fs-extra": "8.1.0",
     "history": "^4.10.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
+    "is-wsl": "^2.1.1",
     "jest": "24.9.0",
     "jest-cli": "^24.9.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.0",
+    "jest-watch-typeahead": "0.4.2",
     "lodash": "^4.17.15",
-    "mini-css-extract-plugin": "0.8.0",
+    "mini-css-extract-plugin": "0.9.0",
     "mocha": "^6.2.2",
     "moment": "^2.24.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
+    "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.11.0",
-    "react-app-polyfill": "^1.0.4",
-    "react-bootstrap": "^1.0.0-beta.14",
+    "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.5",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dates": "^21.5.1",
-    "react-dev-utils": "^9.1.0",
-    "react-dom": "^16.11.0",
-    "react-redux": "^7.1.1",
+    "react-dev-utils": "^10.0.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-stripe-elements": "^6.0.1",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
-    "semver": "6.3.0",
-    "style-loader": "1.0.0",
+    "resolve": "1.14.1",
+    "resolve-url-loader": "3.1.1",
+    "sass-loader": "8.0.0",
+    "semver": "7.1.1",
+    "style-loader": "1.1.2",
     "styled-components": "^4.4.1",
-    "terser-webpack-plugin": "^2.3.0",
-    "ts-pnp": "1.1.4",
-    "typescript": "3.6.4",
-    "url-loader": "2.1.0",
-    "webpack": "4.41.0",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.1.1",
+    "terser-webpack-plugin": "^2.3.1",
+    "ts-pnp": "1.1.5",
+    "typescript": "3.7.4",
+    "url-loader": "3.0.0",
+    "webpack": "4.41.5",
+    "webpack-dev-server": "3.10.1",
+    "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1",
-    "yup": "^0.27.0"
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "node build/scripts/start.js",
@@ -165,13 +165,13 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.6.0",
-    "@typescript-eslint/parser": "^2.6.0",
-    "eslint": "^6.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0"
   }
 }
