--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-stripe-elements": "^6.0.2",
     "@types/redux": "^3.6.0",
+    "@types/stripe-v3": "^3.1.14",
     "@types/styled-components": "^4.4.1",
     "@types/yup": "^0.26.27",
     "axios": "^0.19.0",
