--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mini-css-extract-plugin": "0.9.0",
     "mocha": "^6.2.2",
     "moment": "^2.24.0",
+    "now": "^17.0.4",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -92,6 +93,7 @@
   "scripts": {
     "start": "node build/scripts/start.js",
     "build": "node build/scripts/build.js",
+    "now-build": "bash bin/build.sh && yarn build",
     "test": "node build/scripts/test.js",
     "lint:fix": "npx eslint --fix 'src/**'"
   },
