--- a/netflify.toml
+++ b/netflify.toml
@@ -4,6 +4,20 @@
   publish = "build/public/"
   command = "yarn build"
 
+# Production context: all deploys from the Production branch set in your site's
+# deploy contexts will inherit these settings.
+[context.production] 
+  echo = "Production environment"
+[context.production.environment]
+  REACT_APP_CONTEXT_ENV = "production"
+
+# Deploy Preview context: all deploys generated from a pull/merge request will
+# inherit these settings.
+[context.develop] 
+  echo = "Staging environment"
+[context.develop.environment] 
+  REACT_APP_CONTEXT_ENV = "staging"
+
 # When using a SPA we want the internal routing to route to the same index.html file
 [[redirects]]
   from = "/*"
