removed a couple of typings, built stripe redirect container and added its services

--- a/netflify.toml
+++ b/netflify.toml
@@ -1,20 +1,20 @@
 # Builds the app
 [build]
   base = "."
-  publish = "build/public/"
+  publish = "build/build/public/"
   command = "yarn build"
 
 # Production context: all deploys from the Production branch set in your site's
 # deploy contexts will inherit these settings.
 [context.production] 
-  echo = "Production environment"
+  command = "echo 'Production environment'"
 [context.production.environment]
   REACT_APP_CONTEXT_ENV = "production"
 
 # Deploy Preview context: all deploys generated from a pull/merge request will
 # inherit these settings.
 [context.develop] 
-  echo = "Staging environment"
+  command = "echo 'Staging environment'"
 [context.develop.environment] 
   REACT_APP_CONTEXT_ENV = "staging"
 
