--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "24.0.25",
     "@types/lodash": "^4.14.149",
     "@types/node": "13.1.1",
+    "@types/qs": "^6.9.1",
     "@types/react": "16.9.17",
     "@types/react-datepicker": "^2.10.0",
     "@types/react-dates": "^17.1.7",
@@ -63,6 +64,7 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.5",
     "react-bootstrap": "^1.0.0-beta.16",
