public folder to be published, don't use base

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 # Builds the app
 [build]
-  base = "./"
-  publish = "public/"
   command = "yarn build"
+  publish = "public"
 
 # Production context: all deploys from the Production branch set in your site's
 # deploy contexts will inherit these settings.
