--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-stripe-elements": "^6.0.2",
-    "@types/redux": "^3.6.0",
     "@types/stripe-v3": "^3.1.14",
     "@types/styled-components": "^4.4.1",
     "@types/yup": "^0.26.27",
     "axios": "^0.19.0",
-    "babel-eslint": "10.0.3",
+    "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.5",
@@ -56,7 +55,6 @@
     "mini-css-extract-plugin": "0.9.0",
     "mocha": "^6.2.2",
     "moment": "^2.24.0",
-    "now": "^17.0.4",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -69,7 +67,7 @@
     "react-app-polyfill": "^1.0.5",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dates": "^21.5.1",
-    "react-dev-utils": "^10.0.0",
+    "react-dev-utils": "10.0.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -84,7 +82,7 @@
     "styled-components": "^4.4.1",
     "terser-webpack-plugin": "^2.3.1",
     "ts-pnp": "1.1.5",
-    "typescript": "3.7.4",
+    "typescript": "3.8.3",
     "url-loader": "3.0.0",
     "webpack": "4.41.5",
     "webpack-dev-server": "3.10.1",
@@ -169,8 +167,8 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "2.19.1",
