--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-datepicker": "^2.10.0",
     "@types/react-dates": "^17.1.7",
     "@types/react-dom": "16.9.4",
+    "@types/react-html-parser": "^2.0.1",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-stripe-elements": "^6.0.2",
@@ -69,6 +70,7 @@
     "react-dates": "^21.5.1",
     "react-dev-utils": "10.0.0",
     "react-dom": "^16.12.0",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-stripe-elements": "^6.0.1",
