created createTimeRanges function that uses moment to leverage essential time calculations.
Fixed testsSetup folder to use Jest instead of mock sinon, mocha, chai libraries, since Jest uses these internally

--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
       "react-app-polyfill/jsdom"
     ],
     "setupFilesAfterEnv": [
-      "<rootDir>/src/utils/testsSetup/index.js"
+      "<rootDir>/src/utils/testsSetup/index.ts"
     ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
