--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,7 @@
         "react/no-array-index-key": 0,
         "react/jsx-filename-extension": "off",
         "semi": ["error", "never"],
-        "object-curly-spacing": 0
+        "object-curly-spacing": 0,
+        "no-underscore-dangle": "off"
     }
 }
