--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "postcss-safe-parser": "4.0.1",
     "qs": "6.9.1",
     "react": "16.12.0",
-    "react-app-polyfill": "1.0.5",
+    "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dates": "21.5.1",
     "react-dev-utils": "10.0.0",
@@ -105,12 +105,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 11"
     ]
   },
   "jest": {
