cache image assets

--- a/netlify.toml
+++ b/netlify.toml
@@ -18,3 +18,12 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+# Cache control headers
+[[headers]]
+  for = "/static/media"
+  [headers.values]
+    cache-control = '''
+      public,
+      max-age=604800
+    '''
