linter fixed, more compiler tsconfig settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "*": [
         "*", 
-        "components/*", 
+        "components/*",
+        "containers/*",
         "enums/*", 
         "routes/*", 
         "services/*", 
