--- a/package.json
+++ b/package.json
@@ -144,11 +144,12 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ],
-    "modulePaths": [],
+    "modulePaths": ["<rootDir>"],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
     },
+    "moduleDirectories": ["node_modules", "src"],
     "moduleFileExtensions": [
       "web.js",
       "js",
