initial configuration for service worker

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
         "store/*", 
         "types/*", 
         "ui/*", 
-        "utils/*"
+        "utils/*",
+        "worker/*"
       ],
     }
   },
