--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.7.7",
-    "@svgr/webpack": "5.0.0",
+    "@babel/core": "7.12.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@svgr/webpack": "5.4.0",
     "@types/chai": "^4.2.12",
     "@types/enzyme": "3.10.4",
     "@types/enzyme-adapter-react-16": "1.0.5",
@@ -22,76 +23,91 @@
     "@types/react-router-dom": "5.1.3",
     "@types/react-stripe-elements": "6.0.2",
     "@types/stripe-v3": "3.1.14",
-    "@types/styled-components": "4.4.1",
+    "@types/styled-components": "5.1.4",
     "@types/yup": "0.26.27",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "axios": "0.19.0",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "0.3.5",
-    "babel-preset-react-app": "9.1.0",
-    "camelcase": "5.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.0",
+    "babel-loader": "8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-preset-react-app": "^10.0.0",
+    "bfj": "^7.0.2",
+    "camelcase": "^6.1.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chai": "4.2.0",
-    "css-loader": "3.4.0",
+    "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
-    "eslint-config-react-app": "5.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-loader": "3.0.3",
-    "eslint-plugin-flowtype": "4.5.2",
-    "file-loader": "5.0.2",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.9.2",
+    "eslint-webpack-plugin": "^2.1.0",
+    "file-loader": "6.1.1",
     "formik": "2.0.8",
-    "fs-extra": "8.1.0",
+    "fs-extra": "^9.0.1",
     "history": "4.10.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "2.1.1",
-    "jest": "24.9.0",
+    "jest": "26.6.0",
+    "jest-circus": "26.6.0",
     "jest-cli": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.2",
+    "jest-resolve": "26.6.0",
+    "jest-watch-typeahead": "0.6.1",
     "lodash": "4.17.15",
-    "mini-css-extract-plugin": "0.9.0",
+    "mini-css-extract-plugin": "0.11.3",
     "mocha": "6.2.2",
     "moment": "2.24.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
-    "postcss-flexbugs-fixes": "4.1.0",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "pnp-webpack-plugin": "1.6.4",
+    "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
+    "postcss-safe-parser": "5.0.2",
     "qs": "6.9.1",
-    "react": "16.12.0",
-    "react-app-polyfill": "^1.0.6",
+    "react": "^17.0.1",
+    "react-app-polyfill": "^2.0.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dates": "21.5.1",
-    "react-dev-utils": "10.0.0",
-    "react-dom": "16.12.0",
+    "react-dev-utils": "^11.0.0",
+    "react-dom": "^17.0.1",
     "react-html-parser": "2.0.2",
     "react-redux": "7.1.3",
+    "react-refresh": "^0.8.3",
     "react-router-dom": "5.1.2",
     "react-stripe-elements": "6.0.1",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
-    "resolve": "1.14.1",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.0",
-    "semver": "7.1.1",
-    "style-loader": "1.1.2",
-    "styled-components": "4.4.1",
-    "terser-webpack-plugin": "2.3.1",
-    "ts-pnp": "1.1.5",
-    "typescript": "3.8.3",
-    "url-loader": "3.0.0",
-    "webpack": "4.41.5",
-    "webpack-dev-server": "3.10.1",
+    "resolve": "1.18.1",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "8.0.2",
+    "semver": "7.3.2",
+    "style-loader": "1.3.0",
+    "styled-components": "5.2.1",
+    "terser-webpack-plugin": "4.2.3",
+    "ts-pnp": "1.2.0",
+    "typescript": "^4.0.3",
+    "url-loader": "4.1.1",
+    "web-vitals": "^0.2.4",
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
+    "workbox-webpack-plugin": "5.1.4",
     "yup": "0.28.0"
   },
   "scripts": {
@@ -144,12 +160,17 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ],
-    "modulePaths": ["<rootDir>"],
+    "modulePaths": [
+      "<rootDir>"
+    ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
     },
-    "moduleDirectories": ["node_modules", "src"],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
     "moduleFileExtensions": [
       "web.js",
       "js",
@@ -171,15 +192,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0"
   }
 }
